--- a/auto/ansible/templates/rc.local_linux.j2
+++ b/auto/ansible/templates/rc.local_linux.j2
@@ -1,11 +1,12 @@
 # Maintained by Ansible.
 
-# Set MTU
 {% for n in network_configuration.networks %}
 {% if n.v4.mtu is defined %}
+# Set v4 MTU for {{ n.name }}
 ip link set {{ n.name }} mtu {{ n.v4.mtu }}
 {% endif %}
 {% if n.v6.mtu is defined %}
+# Set v6 MTU for {{ n.name }}
 echo 0 > /proc/sys/net/ipv6/conf/{{ n.sysctl_name | default(n.name) }}/accept_ra_mtu
 echo {{ n.v6.mtu }} > /proc/sys/net/ipv6/conf/{{ n.sysctl_name | default(n.name) }}/mtu
 {% endif %}
