--- a/auto/ansible/templates/rc.local_linux.j2
+++ b/auto/ansible/templates/rc.local_linux.j2
@@ -16,7 +16,7 @@ echo {{ n.v6.mtu }} > /proc/sys/net/ipv6/conf/{{ n.sysctl_name | default(n.name)
 {% if n.v4.mss is defined and n.v4.static_routes is defined %}
 {% for r in n.v4.static_routes %}
 # Set MSS for {{ r.network }}
-ip route change {{ r.network }} advmss {{ n.v4.mss }}
+ip route change {{ r.network }} via {{ r.gateway }} advmss {{ n.v4.mss }}
 {% endfor %}
 {% endif %}
 
