--- a/auto/ansible/templates/named.conf.j2
+++ b/auto/ansible/templates/named.conf.j2
@@ -6,5 +6,6 @@ options {
   listen-on { {{ listen_addrs[0] }}; {{ listen_addrs[1] }}; };
   listen-on-v6 { {{ listen_addrs_6[0] }}; {{ listen_addrs_6[1] }}; };
 };
+{% if scenario is defined %}
 zone "net." { type master; file "/root/scenarios/5.{{ scenario }}-net"; };
-
+{% endif %}
