Start bind resolvers with service files

--- a/auto/ansible/templates/systemd_bind.service.j2
+++ b/auto/ansible/templates/systemd_bind.service.j2
@@ -5,7 +5,8 @@ After=syslog.target network-online.target
 [Service]
 Type=forking
 PIDFile={{ software_target_dir }}/etc/bind/bind.pid
-ExecStart={{ software_target_dir }}/sbin/named -c {{ software_target_dir }}/etc/bind/bind.conf
+ExecStart={{ software_target_dir }}/sbin/named -c {{ software_target_dir }}/etc/bind/bind.conf{% if n_cpus is defined %} -n {{ n_cpus }}
+{% endif %}
 ExecReload=/bin/kill -HUP $MAINPID
 ExecStop=/bin/kill -TERM $MAINPID
 
