--- a/auto/ansible/templates/nsd.conf.j2
+++ b/auto/ansible/templates/nsd.conf.j2
@@ -10,6 +10,7 @@ server:
 {% if cfg.minimal_responses is defined %}
     minimal-responses: {{ cfg.minimal_responses }}
 {% endif %}
+    cookie-secret: "deadbeefdeadbeefdeadbeefdeadbeef"
 {% if cfg.cookie is defined %}
     answer-cookie: {{ cfg.cookie }}
 {% endif %}
