Special example. domain for test query
Also nsd-4.1.20 does not know about cookie-secret

--- a/auto/ansible/templates/knot.conf.j2
+++ b/auto/ansible/templates/knot.conf.j2
@@ -15,9 +15,11 @@ template:
     global-module: mod-cookies
 {% endif %}
 
+{% if cfg.cookie is defined %}
 mod-cookies:
     - id: default
       secret: 0xdeadbeefdeadbeefdeadbeefdeadbeef
+{% endif %}
 
 {% if zone_cfg is defined %}
 zone:
