--- a/auto/ansible/templates/named.conf.j2
+++ b/auto/ansible/templates/named.conf.j2
@@ -7,5 +7,8 @@ options {
   listen-on-v6 { {{ listen_addrs_6[0] }}; {{ listen_addrs_6[1] }}; };
 };
 {% if scenario is defined %}
+{%   if scenario | int == 1 or scenario | int == 2 %}
 zone "net." { type master; file "/root/scenarios/5.{{ scenario }}-net"; };
+{%   endif %}
+zone "example." { type master; file "/root/scenarios/5.9-example"; };
 {% endif %}
