--- a/auto/ansible/templates/ipinfo.json.j2
+++ b/auto/ansible/templates/ipinfo.json.j2
@@ -7,9 +7,13 @@
 {%   endfor %}
 {% endfor %}
 {% for letter, v in root_letters.items() %}
-{%  set d = { 'host': 'gateway-vm', 'software': letter, 'ipv4': v.ipv4, 'ipv6': v.ipv6 } %}
-{%  set _dummy = ns.ips.update({ v.ipv4: d }) %}
-{%  set _dummy = ns.ips.update({ v.ipv6: d }) %}
+{%  set d = { 'host': 'gateway-vm', 'software': letter, 'ipv4': v.ipv4 | first, 'ipv6': v.ipv6 | first } %}
+{%  for ipv4_address in v.ipv4 %}
+{%    set _dummy = ns.ips.update({ ipv4_address: d }) %}
+{%  endfor %}
+{%  for ipv6_address in v.ipv6 %}
+{%    set _dummy = ns.ips.update({ ipv6_address: d }) %}
+{%  endfor %}
 {% endfor %}
 {% for sw in hostvars['resolvers-vm'].build_config.software %}
 {%  if 'outgoing_ipv4' in sw %}
@@ -30,4 +34,4 @@
 {% set d = { 'host': 'b.iana-servers.net', 'software': '?', 'ipv4': '199.43.133.53', 'ipv6': '2001:500:8d::53' } %}
 {% set _dummy = ns.ips.update({ d.ipv4: d }) %}
 {% set _dummy = ns.ips.update({ d.ipv6: d }) %}
-{{ ns.ips|tojson }}
+{{ ns.ips | to_nice_json }}
