Second testing tld: example2.

--- a/auto/ansible/templates/named.conf.j2
+++ b/auto/ansible/templates/named.conf.j2
@@ -11,4 +11,5 @@ options {
 zone "net." { type master; file "/root/scenarios/5.{{ scenario }}-net"; };
 {%   endif %}
 zone "example." { type master; file "/root/scenarios/5.9-example"; };
+zone "example2." { type master; file "/root/scenarios/5.9-example2"; };
 {% endif %}
