Generate trust anchors from the source and fix trust anchor for bind >= 9.15.8

--- a/auto/ansible/templates/resolvers/bind.conf.j2
+++ b/auto/ansible/templates/resolvers/bind.conf.j2
@@ -5,7 +5,11 @@ options {
   empty-zones-enable no;
   directory      "{{ this_target_dir }}/etc/bind/";
   pid-file       "{{ this_target_dir }}/etc/bind/bind.pid";
+{% if software_name.split('-')[1].split('.') | map('int') | list < [9, 15, 8] %}
   bindkeys-file  "/usr/share/dns/bind.keys";
+{% else %}
+  bindkeys-file  "/usr/share/dns/new-bind.keys";
+{% endif %}
 
   listen-on     { {{ listen_ipv4 }}; };
   listen-on-v6  { none; };
