--- a/auto/ansible/templates/resolvers/unbound.conf.j2
+++ b/auto/ansible/templates/resolvers/unbound.conf.j2
@@ -6,4 +6,7 @@ server:
 	chroot: ""
 	username: ""
 	trust-anchor-file: "/usr/share/dns/root.key"
+{% if software_name.split('-')[1].split('.') | map('int') | list >= [1, 6, 8] %}
+	trust-anchor-signalling: no
+{% endif %}
 
