Add more resolver software

--- a/auto/ansible/templates/resolvers/pdns-recursor.conf.j2
+++ b/auto/ansible/templates/resolvers/pdns-recursor.conf.j2
@@ -3,5 +3,5 @@ local-address={{ listen_ipv4 }}
 query-local-address={{ outgoing_ipv4 }}
 query-local-address6={{ outgoing_ipv6 }}
 lua-config-file=/usr/share/dns/pdns.lua
-security-poll-suffix=
-
+dnssec=process
+security-poll-suffix=""
