--- a/auto/ansible/templates/resolvers/unbound.conf.j2
+++ b/auto/ansible/templates/resolvers/unbound.conf.j2
@@ -7,8 +7,5 @@ server:
 	username: ""
 	trust-anchor-file: "/usr/share/dns/root.key"
 {% if not ((cfg.ta_signal | default(false)) and cfg.ta_signal == 'absent') %}
-        trust-anchor-signaling: no
-{% endif %}
-{% if not ((cfg.rk_sentinel | default(false)) and cfg.rk_sentinel == 'absent') %}
-        root-key-sentinel: no
+        trust-anchor-signaling: {{ cfg.ta_signal | default('no') }}
 {% endif %}
