Fix pdns service file

--- a/auto/ansible/templates/systemd_pdns-recursor.service.j2
+++ b/auto/ansible/templates/systemd_pdns-recursor.service.j2
@@ -3,7 +3,7 @@ Description={{ service_name }} service
 After=syslog.target network-online.target
 
 [Service]
-ExecStart={{ software_target_dir }}/usr/local/sbin/pdns_recursor --daemon=no --write-pid=no --disable-syslog --config-dir={{ software_target_dir }}/etc/pdns
+ExecStart={{ software_target_dir }}/usr/local/sbin/pdns_recursor --daemon=no --write-pid=no --disable-syslog --config-dir={{ software_target_dir }}/etc/pdns-recursor
 Type=simple
 Restart=on-failure
 StartLimitInterval=0
