--- a/auto/ansible/templates/resolvers/pdns-recursor.conf.j2
+++ b/auto/ansible/templates/resolvers/pdns-recursor.conf.j2
@@ -7,4 +7,4 @@ query-local-address6={{ outgoing_ipv6 }}
 query-local-address={{ outgoing_ipv4 }},{{ outgoing_ipv6 }}
 {% endif %}
 lua-config-file=/usr/share/dns/pdns.lua
-security-poll-suffix=""
+security-poll-suffix=
