Resolve with root.hints

--- a/auto/ansible/templates/resolvers/bind.conf.j2
+++ b/auto/ansible/templates/resolvers/bind.conf.j2
@@ -15,6 +15,11 @@ options {
   listen-on-v6  { none; };
   query-source    {{ outgoing_ipv4 }};
   query-source-v6 {{ outgoing_ipv6 }};
-
-
 };
+{% if scenario is defined %}
+zone "." {
+  type hint;
+  file "/root/scenarios/{% if realips is defined and realips | bool is false %}9{% else %}5{% endif %}.{{ scenario }}{% if variant is defined and variant | bool is true %}.1{% endif %}-root.hints";
+};
+{% endif %}
+
