--- a/auto/ansible/templates/resolvers/unbound.conf.j2
+++ b/auto/ansible/templates/resolvers/unbound.conf.j2
@@ -10,6 +10,6 @@ server:
         trust-anchor-signaling: {{ cfg.ta_signal | default('no') }}
 {% endif %}
 {% if scenario is defined %}
-	root-hints: "/root/scenarios/{% if realips is defined and realips | bool is false %}9{% else %}5{% endif %}.{{ scenario }}{% if variant is defined and variant | bool is true %}.1{% endif %}-root.hints"
+	root-hints: "/root/scenarios/{% if realips is defined and realips | bool is false %}.9{% else %}5{% endif %}.{{ scenario }}{% if variant is defined and variant | bool is true %}.1{% endif %}-root.hints"
 {% endif %}
 
