--- a/auto/ansible/templates/resolvers/knot-resolver.conf.j2
+++ b/auto/ansible/templates/resolvers/knot-resolver.conf.j2
@@ -5,6 +5,6 @@ trust_anchors.add_file('/usr/share/dns/root.key', { readonly = true })
 modules.unload('ta_signal_query')
 {% if scenario is defined %}
 modules = { 'hints > iterate' }
-hints.root_file('/root/scenarios/{% if realips is defined and realips | bool is false %}9{% else %}5{% endif %}.{{ scenario }}{% if variant is defined and variant | bool is true %}.1{% endif %}-root.hints')
+hints.root_file('/root/scenarios/{% if realips is defined and realips | bool is false %}.9{% else %}5{% endif %}.{{ scenario }}{% if variant is defined and variant | bool is true %}.1{% endif %}-root.hints')
 {% endif %}
 
